--- a/src/app/components/page/mainPage/mainPage.module.scss
+++ b/src/app/components/page/mainPage/mainPage.module.scss
@@ -3,8 +3,8 @@
   padding: 15px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-auto-rows: 5rem;
   grid-gap: 1rem;
+  height: fit-content;
 }
 
 .article {
